# Accommodation

./: LICENSE  Makefile  README.md  create.md  package-lock.json  package.json
app/: layout.tsx  page.module.css  page.tsx
app/api/rooms/: route.ts
app/components/: Layout.tsx  layout.module.css
app/private-accommodation/: page.tsx
backend/: app.py  database.py  main.py  models.py  pyproject.toml
prisma/: prisma.ts  schema.prisma
prisma/migrations/20250115182146_init/: migration.sql
prisma/migrations/20250115182504_init/: migration.sql
prisma/migrations/20250115200317_init/: migration.sql
prisma/migrations/20250115201137_init/: migration.sql
prisma/migrations/20250115201323_init/: migration.sql
spa/: package-lock.json  package.json  tailwind.config.ts  tsconfig.json
spa/src/: plan.txt
spa/src/app/: page.tsx
spa/src/pages/: ensuite-rooms.tsx  flats.tsx  generalRooms.tsx  homePage.tsx  payment-screen.tsx  private-rooms.tsx  privateRooms.tsx  registration-complete.tsx  registrationComplete.tsx  reservation-complete.tsx  reservationComplete.tsx
spa/src/utils/: axios.ts  room-availability-checker.tsx  roomAvailabilityChecker.tsx
supabase/: config.toml
